--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    expose:
+      - 5432
     restart: always
   backend:
     container_name: backend
@@ -19,10 +21,12 @@ services:
     volumes:
       - ./core:/usr/src/app
     working_dir: /usr/src/app
-    command: django-admin startproject core .
+    command: python manage.py runserver 0.0.0.0:8000
+    ports:
+      - 8000:8000
     environment:
       - DEBUG=True
-    # restart: always
+    restart: always
     depends_on:
       - db
   
